fixed for the finals

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <span><i id="card-heart1" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title service-name">National Emergency Number</h1>
-                <p class="mt-[-0.625rem]">National Emergency</p>
+                <p id="short-name1" class="mt-[-0.625rem]">National Emergency</p>
                 <div>
                     <h1 id="hotline1" class="card-title service-number">999</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">All</span>
@@ -87,7 +87,7 @@
                     <span><i id="card-heart2" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title service-name">Police Helping Number</h1>
-                <p class="mt-[-0.625rem]">Police</p>
+                <p id="short-name2" class="mt-[-0.625rem]">Police</p>
                 <div>
                     <h1 id="hotline2" class="card-title service-number">999</h1>
                     <span
@@ -112,7 +112,7 @@
                     <span><i id="card-heart3" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title service-name">Fire Service Number</h1>
-                <p class="mt-[-0.625rem]">Fire Service</p>
+                <p id="short-name3" class="mt-[-0.625rem]">Fire Service</p>
                 <div>
                     <h1 id="hotline3" class="card-title service-number">999</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Fire</span>
@@ -150,7 +150,7 @@
                     <span><i id="card-heart4" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title service-name">Ambulance Service</h1>
-                <p class="mt-[-0.625rem]">Ambulance</p>
+                <p id="short-name4" class="mt-[-0.625rem]">Ambulance</p>
                 <div>
                     <h1 id="hotline4" class="card-title service-number">1994-999999</h1>
                     <span
@@ -175,7 +175,7 @@
                     <span><i id="card-heart5" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title service-name">Women & Child Helpline</h1>
-                <p class="mt-[-0.625rem]">Women & Child Helpline</p>
+                <p id="short-name5" class="mt-[-0.625rem]">Women & Child Helpline</p>
                 <div>
                     <h1 id="hotline5" class="card-title service-number">109</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">Help</span>
@@ -199,7 +199,7 @@
                     <span><i id="card-heart6" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title service-name">Anti-Corruption Helpline</h1>
-                <p class="mt-[-0.625rem]">Anti-Corruption</p>
+                <p id="short-name6" class="mt-[-0.625rem]">Anti-Corruption</p>
                 <div>
                     <h1 id="hotline6" class="card-title service-number">106</h1>
                     <span
@@ -224,7 +224,7 @@
                     <span><i id="card-heart7" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title service-name">Electricity Helpline</h1>
-                <p class="mt-[-0.625rem]">Electricity Outage</p>
+                <p id="short-name7" class="mt-[-0.625rem]">Electricity Outage</p>
                 <div>
                     <h1 id="hotline7" class="card-title service-number">16216</h1>
                     <span
@@ -249,7 +249,7 @@
                     <span><i id="card-heart8" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title service-name">Brac Helpline</h1>
-                <p class="mt-[-0.625rem]">Brac</p>
+                <p id="short-name8" class="mt-[-0.625rem]">Brac</p>
                 <div>
                     <h1 id="hotline8" class="card-title service-number">16445</h1>
                     <span class="inline-block bg-gray-100 text-sm text-gray-700 px-3 py-1 rounded-full mt-1">NGO</span>
@@ -273,7 +273,7 @@
                     <span><i id="card-heart9" class="fa-regular fa-heart text-xl mt-5"></i></span>
                 </div>
                 <h1 class="card-title service-name">Bangladesh Railway Helpline</h1>
-                <p class="mt-[-0.625rem]">Bangladesh Railway</p>
+                <p id="short-name9" class="mt-[-0.625rem]">Bangladesh Railway</p>
                 <div>
                     <h1 id="hotline9" class="card-title service-number">163</h1>
                     <span
